# fns

./: Cargo.toml  TODO.md  default.nix  main.fns  prgm.fns  rustfmt.toml
examples/: rev.fns
old/: lex.rs  lib.rs  main.rs  parse.rs
src/: error.rs  eval.rs  lex.rs  lib.rs  main.rs  parse.rs
src/lex/: error.rs  mod.rs  token.rs
src/parse/: ast.rs  error.rs  mod.rs
tests/: arithmetic.fns  conditionals.fns  functions.fns  loops.fns  strings.fns  variables.fns
tests/builtins/: arrays.fns  eval.fns  read-file.fns
tests/language/: arrays.fns  booleans.fns  functions.fns  nil.fns  numbers.fns  strings.fns
