[package]
name = "fns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.2.0"
[dependencies.chumsky]
git = "https://github.com/zesterer/chumsky"
rev = "42d5af5a5710f6d60beedcde1904155e96451568"
