[package]
name = "fns"
version = "0.1.0"
edition = "2021"

[dependencies]
lasso = { version = "0.7.2", features = ["ahasher"] }
thiserror = "1"
# wasm-encoder = "0.29.0"
# wasmtime = "10"

[dependencies.chumsky]
git = "https://github.com/zesterer/chumsky"
rev = "7467d76e7b5b66864d9167120a1312b208f982c8"
